--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "python.pythonPath": "/usr/bin/python3"
+  "python.pythonPath": "/usr/bin/python3",
+  "python.autoComplete.addBrackets": true,
+  "python.analysis.completeFunctionParens": true,
+  "python.autoComplete.extraPaths": [
+    "/usr/local/opt/opencv@2/lib/pkgconfig"
+  ],
+  "python.analysis.extraPaths": [
+    "/usr/local/opt/opencv@2/lib/pkgconfig"
+  ],
 }
